# shade-stellar-contract

./: PR_NOTES_198_184_202_190.md
contracts/account/src/: account.rs  errors.rs  interface.rs  types.rs
contracts/account/src/tests/: mod.rs  test_withdrawal.rs
contracts/escrow/src/: lib.rs
contracts/shade/src/: errors.rs  events.rs  interface.rs  shade.rs  types.rs
contracts/shade/src/components/: account_factory.rs  admin.rs  event.rs  invoice.rs  merchant.rs  mod.rs  subscription.rs
contracts/shade/src/tests/: mod.rs  test_calculate_fee.rs  test_event_tickets.rs  test_fee_discounts.rs  test_fiat_pricing.rs  test_merchant_tokens.rs  test_shade_restriction.rs  test_subscription.rs  test_subscription_enrollment.rs  test_time_locked_fees.rs
contracts/ticketing/src/: lib.rs  test_integration.rs
contracts/ticketing_factory/: Cargo.toml
contracts/ticketing_factory/src/: errors.rs  lib.rs  test.rs
